objects/Agronomy__c.object
<CustomObject>
    <description>For capturing agronomy information for a Retail Producer Account or Prospect.</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Master-Detail relationship to Account object.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agronomy</relationshipLabel>
        <relationshipName>Agronomy</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category_Type__c</fullName>
        <description>Category Type for Agronomy</description>
        <label>Category Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Category_Type_Agronomy</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category for Agronomy</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Category_for_Agronomy</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <description>Units for Agronomy</description>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Agronomy</label>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>Agronomy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agronomy</pluralLabel>
    <recordTypes>
        <fullName>Agronomy</fullName>
        <active>true</active>
        <description>Agronomy</description>
        <label>Agronomy</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>